# serverless-cpp-test

./: CMakeLists.txt  Dockerfile
include/: crow_all.h
lib/: libProject.lib
libhello/: CMakeLists.txt  HelloDLL.cpp  HelloDLL.h
shortcut/: app.cpp
src/: CMakeLists.txt  app.cpp
